--- a/main.css
+++ b/main.css
@@ -89,6 +89,12 @@ legend {
 
 /*Font*/
 /* Color */
+
+html {
+    height: 100%;
+    background: #F1F1F1;
+}
+
 body {
   position: relative;
   font-family: "Roboto", sans-serif;
@@ -113,13 +119,14 @@ a {
 /*Blocks*/
 .header {
   width: 100%;
+  background-color: #FFFFFF;
 }
 
 .header__top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #FFFFFF;
+
 }
 @media screen and (max-width: 490px) {
   .header__top {
@@ -205,7 +212,7 @@ nav {
   position: relative;
   background: #F1F1F1;
   padding: 32px 0 43px;
-  height: 100vh;
+  height: 100%;
 }
 
 .main_content {
